--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>FlaskToolbox</title>
+  <title>The Flask Toolbox - Find the package you want</title>
+  <%= stylesheet_link_tag "bootstrap.min", "flask-toolbox" %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag "jquery-1.11.3.min", "bootstrap.min" %>
   <%= csrf_meta_tags %>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-<%= yield %>
-
+  <%= render "header" %>
+  <div class="container">
+    <%= yield %>
+  </div>
+  <%= render "footer" %>
 </body>
 </html>
