Move header and footer to shared folder

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <%= render "header" %>
+  <%= render "shared/header" %>
   <div class="container">
     <%= yield %>
   </div>
-  <%= render "footer" %>
+  <%= render "shared/footer" %>
 </body>
 </html>
