--- a/app/views/packages/show.html.erb
+++ b/app/views/packages/show.html.erb
@@ -5,6 +5,6 @@
 </div>
 <div class="col-md-9 package">
   <div class="well package-info">
-    <%= render 'package' %>
+    <%= render partial: 'shared/package', object: @package%>
   </div>
 </div>
