Add home to the navigation

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,6 +3,7 @@
     <div class="col-md-2 navigation">
       <p>Navigation</p>
       <ul class="navigation">
+        <li><%= link_to 'Home', '/' %></li>
         <li><%= link_to 'Categories', categories_path %></li>
         <li><%= link_to 'Packages', packages_path %></li>
         <li><a href='#'>Blog</a></li>
