--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -46,6 +46,7 @@
     </div>
     <div class="col-md-offset-4 col-md-4">
       <ul class="navmenu">
+        <li><%= link_to 'Home', '/' %></li>
         <li><%= link_to 'Categories', categories_path %></li>
         <li><%= link_to 'Packages', packages_path %></li>
         <li><a href="#">Blog</a></li>
